--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "muter": "^0.7.0"
   }
 }
