--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "muter": "^0.7.0"
+    "muter": "^0.7.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.3"
   }
 }
