--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Acm.12345",
+    "password": "12345678",
     "database": "topsales6",
     "host": "127.0.0.1",
     "dialect": "mysql",
