--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
