--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "gaivota775",
+    "password": "ludmyla1203",
     "database": "topsales6",
-    "host": "192.168.157.44",
+    "host": "127.0.0.1",
     "dialect": "mysql",
     "port": "3306"
   },
